# movie-service

./: .gitignore  AGENTS.md  AI_WORKFILES.md  CLAUDE.md  DESIGN.md  INTERVIEW.md  Makefile  PERFORMANCE.md  README.md  benchmark.py  generate_large_csv.py  main.py  plan.html  plan.md  pyproject.toml  requirements.md
.claude/: settings.local.json
app/: db.py  model.py  movies.py
frontend/: design.html  index.html  interview.html  plan.html  readme.html
tests/: conftest.py  test_db.py  test_movies.py
