[project]
name = "movies-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "duckdb>=1.5.0",
    "fastapi[standard]>=0.117.1",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
